--- a/CPU/test-script.service
+++ b/CPU/test-script.service
@@ -4,7 +4,11 @@ Description=forever test service
 [Service]
 Type=simple
 ExecStart=/tmp/test-script.sh
-StandardOutput=syslog               # Output to syslog
-StandardError=syslog                # Output to syslog
+StandardOutput=syslog           # Output to syslog
+StandardError=syslog            # Output to syslog
 SyslogIdentifier=test-script
 
+[Slice]
+CPUAccounting=true
+CPUShares=150			# default to 1024 -> set priority 
+CPUQuota=50% 			# CPUQuota (/process /CPU)
